crates/myso/src/unit_tests/snapshots/myso__upgrade_compatibility__upgrade_compatibility_tests__version_mismatch.snap
---
source: crates/myso/src/upgrade_compatibility/../unit_tests/upgrade_compatibility_tests.rs
expression: normalize_path(result.unwrap_err().to_string())
---
error[Compatibility E01008]: file format version downgrade
  ┌─ /fixtures/upgrade_errors/deponly_errors_v2/sources/UpgradeErrors.move:5:8
  │
5 │ module upgrades::upgrades {
  │        ^^^^^^^^^^^^^^^^^^ Downgrading from file format version 1 to 0 is not supported.
  │
  = File format version downgrades are not supported.
  = Please upgrade to the latest version of the move language tooling.


Upgrade failed, this package requires changes to be compatible with the existing package. Its upgrade policy is set to 'additive'. Use --skip-verify-compatibility to bypass this check locally.
